[package]
name = "nonzero-char"
version = "0.1.0"
edition = "2021"

authors = ["A4-Tacks <wdsjxhno1001@163.com>"]
keywords = ["nonzero", "nonnull", "nonzerochar", "non-zero", "char"]
categories = ["no-std", "no-std::no-alloc"]
description = "Implement NonZeroChar, like NonZeroU32"

license = "MIT"
repository = "https://github.com/A4-Tacks/nonzero-char-rs"

readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
